--- a/1/index.html
+++ b/1/index.html
@@ -206,7 +206,7 @@
 
         <div class="layer main mainLeft">
           <div class="hello">
-      <img class="logo" src="images/page1/logo1.gif" />
+      <img class="logo" src="images/logo1.gif" />
        <div class="desc">
        <p>"Jo Insaan Nahi Kar Sakta"<br><br> 27th-29th Feb 2017 <br>at NIFFT Ranchi</p>
       </div>
